# clawplay

./: .gitignore  MASTER_PROMPT.md  README.md  pyproject.toml  tailwind.config.js
scripts/: render_demo_clips.py  render_screenshots.py
src/clawplay/: __init__.py  _palette_registry.yaml  assets.py  charts.py  clawplay.py  espn.py  live_scores.py  match_report.py  palettes.py  report.py  server.py
templates/: hub.html  preview.html  recap.html
tests/: test_assets.py  test_charts.py  test_clawplay.py  test_espn.py  test_match_report.py  test_palettes.py  test_report.py  test_server.py  test_time_utils.py
